// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeedBodyComponent should render the feed content when the content is exists 1`] = `
<div
  class="feed-body"
>
  <div
    class="feed-body__header"
  >
    
  </div>
  <div
    class="feed-body__content"
  />
  
  
  
</div>
`;

exports[`FeedBodyComponent should render the feed image when the imgUrl is exists 1`] = `
<div
  class="feed-body"
>
  <div
    class="feed-body__header"
  >
    
  </div>
  
  <div
    class="feed-body__image"
  >
    <img
      alt="Europe's most active mechanical or industrial engineering professionals on social"
      src="https://dsmn8.imgix.net/_scraper/13cf5006bf679afa7bee45831d7c974a.jpeg"
    />
  </div>
  
  
</div>
`;

exports[`FeedBodyComponent should render the feed title when the name is exists 1`] = `
<div
  class="feed-body"
>
  <div
    class="feed-body__header"
  >
    <h3
      class="feed-body__header-title"
    >
       Why You SHOULD Limit Employee Advocacy [Podcast] 
    </h3>
    
  </div>
  
  
  
</div>
`;
